Fix text width on iPhone.

--- a/views/index.less
+++ b/views/index.less
@@ -1,8 +1,7 @@
 body {
   font-family: 'Times New Roman', serif;
   width: 48em;
-  padding: 1em 1em;
-  margin: 1em auto;
+  margin: 4em auto;
   line-height: 1.5em;
 }
 
@@ -48,9 +47,20 @@ and (max-device-width: 32em)
 body {
   width: auto;
   margin: 1em 1em;
-  padding: 0 0;
   font-family: 'Helvetica Neue', Helvetica, sans-serif;
-  font-size: 2em;
+  font-size: 3em;
+}
+
+.address {
+  font-size: 0.667em;
+}
+
+main {
+  margin-top: 1em;
+
+  p, ul {
+    max-width: initial;
+  }
 }
 
 main {
